fixed friend pictures. fixed requests overflow issue. now has a max height of 150px and scrolls when it's over that. Refactored styles into correct place

--- a/src/main/resources/static/css/generalStyles.css
+++ b/src/main/resources/static/css/generalStyles.css
@@ -205,6 +205,44 @@ h2 {
     width: 500px;
 }
 
+/* Manage Friends styles */
+.friends-container {
+    background-color: rgba(245, 245, 245, 0.5); /* #f5f5f5 in RGB is 245, 245, 245 */
+    border-radius: 10px;
+    border: solid black 1px;
+    width: 100%;
+    min-width: 400px;
+    height: 700px;
+}
+
+.requests-container {
+    background-color: rgba(245, 245, 245, 0.5); /* #f5f5f5 in RGB is 245, 245, 245 */
+    border-radius: 10px;
+    border: solid black 1px;
+    width: 100%;
+    min-width: 400px;
+    height: 200px;
+    margin: 20px 0 20px 0;
+    padding: 10px;
+}
+
+.results-container {
+    background-color: rgba(245, 245, 245, 0.5); /* #f5f5f5 in RGB is 245, 245, 245 */
+    border-radius: 10px;
+    border: solid black 1px;
+    width: 700px;
+    height: 95px;
+    max-height: 95px;
+    overflow: auto;
+    margin: 20px 0 0 0;
+    padding: 10px;
+}
+
+.friend-container-scroll {
+    height: 150px;
+    overflow: auto;
+}
+
 /* Disabled styles */
 .disabled {
     opacity: 0;
