--- a/src/main/resources/static/css/homeMainStyles.css
+++ b/src/main/resources/static/css/homeMainStyles.css
@@ -90,39 +90,6 @@ h1 {
 
 }
 
-.friends-container {
-    background-color: rgba(245, 245, 245, 0.5); /* #f5f5f5 in RGB is 245, 245, 245 */
-    border-radius: 10px;
-    border: solid black 1px;
-    width: 100%;
-    min-width: 400px;
-    height: 700px;
-}
-
-.requests-container {
-    background-color: rgba(245, 245, 245, 0.5); /* #f5f5f5 in RGB is 245, 245, 245 */
-    border-radius: 10px;
-    border: solid black 1px;
-    width: 100%;
-    min-width: 400px;
-    height: 200px;
-    margin: 20px 0 20px 0;
-    padding: 10px;
-}
-
-.results-container {
-    background-color: rgba(245, 245, 245, 0.5); /* #f5f5f5 in RGB is 245, 245, 245 */
-    border-radius: 10px;
-    border: solid black 1px;
-    width: 700px;
-    height: 95px;
-    max-height: 95px;
-    overflow: auto;
-    margin: 20px 0 0 0;
-    padding: 10px;
-}
-
-
 .error {
     border: 1px solid #DE2929;
     outline: 1px solid #DE2929;
